--- a/kapitel-1/veckomeny/meny.html
+++ b/kapitel-1/veckomeny/meny.html
@@ -18,7 +18,7 @@
             <td>fredag</td>
         </tr>
         <tr>
-            <td>kebab</td>
+            <td>kebabrulle</td>
             <td>pannkaka</td>
             <td>köttbullar</td>
             <td>päron</td>
