Lovskola klar med webb

--- a/larforum/10-juni/responsiv/sida2.html
+++ b/larforum/10-juni/responsiv/sida2.html
@@ -13,25 +13,26 @@
             <h2>Mina arbeten</h2>
             <nav>
                 <ul>
-                    <li><a class="aktiv" href="sida1.html">Om mig</a></li>
-                    <li><a href="sida2.html">Webbutveckling</a></li>
+                    <li><a href="sida1.html">Om mig</a></li>
+                    <li><a class="aktiv" href="sida2.html">Webbutveckling</a></li>
                     <li><a href="sida3.html">Engelska</a></li>
                     <li><a href="sida4.html">Svenska</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <h3>Mina studier</h3>
-            <p>Studerande på NTI gymnasiet stockholm på el och energi linjen inriktning dator</p>
-            <img src="./bilder/glad-shomme.jpg" alt="studerar">
+            <h3>Mina sidor</h3>
+            <p>Utav mina 13 ämnen så spelar Webbutveckling en stor del av det och är det ämnen jag studerar huvudsakligen</p>
+            <img src="./bilder/wws.jpg" alt="Kod">
             <h3>Min fritid</h3>
-            <p>På min fritid gillar jag att spela datorspel, träna och fotografera.</p>
-            <img src="./bilder/foto.jpg" alt="fotografering">
-            <img src="./bilder/kkk.jpg" alt="träning">
+            <p>Under kursens gång har jag lärt mig skapa olika slags hemsidor t.ex portfolion, fotoalbum osv, här är exempel på sidor jag skapat..</p>
+            <img src="./bilder/mfdd.jpg" alt="ex på webbsida">
+            <img src="./bilder/hemsss.JPG" alt="al">
             <img src="./bilder/wows.jpg" alt="spel">
         </main>
         <footer>
-            Edvin Kanbar 2021
+            Edvin Kanbar 2021 <br>
+            ©schmoneyboy Inc
         </footer>
     </div>
 </body>
